2008-11-30  Martin Nordholts  <martinn@svn.gnome.org>

	* libgimpwidgets/gimpwidgets-error.[ch]: New files defining
	GIMP_WIDGETS_ERROR domain with currently only a
	GIMP_WIDGETS_PARSE_ERROR error code.

	* libgimpwidgets/Makefile.am: Add the new files here.

2008-11-27  Sven Neumann  <sven@gimp.org>

	Bug 562459 – PF_PALETTE: 'TypeError' when used in a plugin that is
	registered in <Image>

	* plug-ins/pygimp/gimpui.defs (gimp_palette_select_button_new):
	the 'title' parameter is optional.

2008-11-27  Michael Natterer  <mitch@gimp.org>

	Bug 562427 – Compilation with --as-needed

	* app/Makefile.am (gimp_console_2_7_LDADD): add $(GLIB_LIBS) so
	libgthread gets pulled in explicitely.

2008-11-27  Sven Neumann  <sven@gimp.org>

	Bug 562386 – PF_SLIDER and PF_SPINNER 'Step' values do not change
	consistently...

	* plug-ins/pygimp/gimpfu.py (SliderEntry): set the precision on
	the slider just as we do it for the spin-button.

2008-11-27  Sven Neumann  <sven@gimp.org>

	Bug 562386 – PF_SLIDER and PF_SPINNER 'Step' values do not change
	consistently...

	* plug-ins/pygimp/gimpfu.py (SpinnerEntry): initialize the
	spin-button the way that gtk_spin_button_new_with_range() is
	implemented.

2008-11-26  Martin Nordholts  <martinn@svn.gnome.org>

	Bug 562366 – Default image dimensions are not correctly
	transferred in the file/new dialog box

	* app/dialogs/preferences-dialog.c
	(prefs_template_select_callback): We need to copy the template in
	the same way as in the New Image dialog.

	* app/dialogs/image-new-dialog.c (image_new_dialog_set): ... and
	when we copy the template to the New Image dialog.

2008-11-26  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-duplicate.c: split spaghetti code into lots
	of helper functions.

2008-11-25  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpprocbrowserdialog.c (browser_search): show the
	"invalid search term" message in the label below the list instead
	of in the pane on the right side.
